# TeleImageBot

./: Dockerfile  Makefile  README.md  bot_integration.py  config.py  docker-compose.yml  docker-entrypoint.sh  docker-requirements.txt  main.py  nginx.conf  pyproject.toml  replit.md  webhook_server.py
bot/: handlers.py  image_processor.py  keyboards.py
static/css/: style.css
static/js/: webhook.js
templates/: index.html
utils/: file_utils.py
